--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
  <head>
   <meta charset="utf-8" />
   <title>CV</title>
-
-  <style>
- 
-  </style>
+  <link rel="stylesheet" href="style.css">
  </head>
  <body>
   <p>Hello user!</p>
